--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-numeric-input": "^2.2.3",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.0"
+    "react-scripts": "^3.4.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "nodemon": "^1.18.5"
